--- a/Project-I-Social-Card/social-card/src/components/CardComponents/Card.css
+++ b/Project-I-Social-Card/social-card/src/components/CardComponents/Card.css
@@ -1,1 +1,11 @@
-/* All styles for your Card Components live here */
+.card-container {
+    width: 100%;
+}
+
+.card-banner-container {
+    width: 100%;
+}
+
+.card-banner-container img {
+    width: 100%;
+}
