--- a/Project-I-Social-Card/social-card/src/components/HeaderComponents/Header.css
+++ b/Project-I-Social-Card/social-card/src/components/HeaderComponents/Header.css
@@ -1,1 +1,13 @@
-/* All styles for your header Components live here */
+.header-container {
+    display: flex;
+}
+
+.image-container img {
+    width: 50px;
+    height: 50px;
+}
+
+.header-title-container {
+    display: flex;
+    flex-direction: 
+}
