--- a/Project-I-Social-Card/social-card/src/components/HeaderComponents/Header.css
+++ b/Project-I-Social-Card/social-card/src/components/HeaderComponents/Header.css
@@ -2,6 +2,10 @@
     display: flex;
 }
 
+.image-container {
+    margin-right: 10px;
+}
+
 .image-container img {
     width: 50px;
     height: 50px;
@@ -9,5 +13,30 @@
 
 .header-title-container {
     display: flex;
-    flex-direction: 
+    align-items: flex-end;
 }
+
+.header-title {
+    font-size: .9rem;
+    font-weight: bold;
+    margin-right: 5px;
+    margin-top: 2px;
+}
+
+.time-stamp {
+    color: #a0a9b3;
+    font-size: .8rem
+}
+
+.header-content-container {
+    padding: 10px 0;
+}
+
+.header-content {
+    font-size: .9rem;
+    line-height: 20px;
+}
+
+
+
+
